--- a/.github/workflows/seo.yaml
+++ b/.github/workflows/seo.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Set up Puppeteer
         run: |
+          bun remove puppeteer
           sudo apt-get update
           sudo apt-get install -y libgbm-dev
           npx puppeteer browsers install chrome
