--- a/.github/workflows/seo.yaml
+++ b/.github/workflows/seo.yaml
@@ -46,4 +46,5 @@ jobs:
         run: |
           cd betty/
           bun i
+          bun install --frozen-lockfile
           bun scripts/render.ts
